--- a/Marvel/Marvel/Base.lproj/Main.storyboard
+++ b/Marvel/Marvel/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--CharactersListViewController-->
+        <!--main-->
         <scene sceneID="1A2-zc-Tt1">
             <objects>
-                <viewController title="CharactersListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ZIJ-0x-xlx" customClass="CharactersListViewController" customModule="Marvel" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="main" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ZIJ-0x-xlx" customClass="CharactersListViewController" customModule="Marvel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ksr-bj-vFu">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
